# gitwip

./: CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: ci.yml  publish.yml
src/gitwip/: __main__.py  cli.py  main.py
